--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "axios": "^0.21.4",
     "bcryptjs": "^2.4.3",
+    "connect-flash": "^0.1.1",
     "connect-mongo": "^4.5.0",
     "cookie-parser": "^1.4.5",
     "dotenv": "^10.0.0",
@@ -16,6 +18,8 @@
     "hbs": "^4.1.2",
     "mongoose": "^6.0.5",
     "morgan": "^1.10.0",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
